# Big_sort

./: CMakeLists.txt  QuickSort.h  p.cpp~  stdafx.h
FileGenerate/: FileGenerate.cpp  FileGenerate.out
Sort/: FileAdapter.cpp  FileAdapter.h  MergeSort.h  README.txt  Sort.cpp  sort
